syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.cache.ai.service";
option java_outer_classname = "CacheAIService";

package aiservice;

// Service to interact with the AI model
service AIService {

  // Make 1 prediction only
  rpc AIPredictOne(AIInput) returns (StorePrediction) {}

}

message AIInput {
  string filename = 1;
  string siteName = 2;
  string dataType = 3;
  string fileType = 4;
  uint32 userID = 5;
  uint32 numReq = 6;
  float avgTime = 7;
  float size = 8;
}

message StorePrediction {
  bool store = 1;
}
